<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="user_avatar">User avatar</string>
    <string name="menu_button">Menu button</string>
    <string name="likes_icon">Likes icon</string>
    <string name="shared_icon">Shared icon</string>
    <string name="save_icon">Save icon</string>
    <string name="views_icon">Views icon</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="input_post_content_hint">Input your text here</string>
    <string name="error_empty_content">Empty post content!</string>
    <string name="me_author_name">Me</string>
    <string name="published_now">Now</string>
    <string name="edit_post_icon">Edit post icon</string>
    <string name="cancel_edit_post_icon">Cancel edit post button</string>
    <string name="chooser_share_post">Share post:</string>
    <string name="video_placeholder">Video Placeholder</string>
    <string name="add_post_button">Add post button</string>
    <string name="ok_button">OK button</string>
    <string name="undo_button">Undo button\n</string>
    <string name="empty">Empty</string>
    <string name="retry">Retry</string>
    <string name="retry_title">Something went wrong. Error code  </string>
</resources>