<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_x="2dp"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:contentDescription="@string/menu_button"
        style="@style/Widget.AppTheme.MenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_goneMarginEnd="@dimen/regular_margin"
        app:icon="@drawable/baseline_more_vert_24" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/regular_margin"
        app:constraint_referenced_ids="avatar, published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:linksClickable="true"
        android:padding="@dimen/regular_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:checkable="true"
        android:contentDescription="@string/likes_icon"
        android:text="100"
        app:icon="@drawable/like_selector"
        app:iconTint="@color/like_color_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/shared_icon"
        android:text="100"
        app:icon="@drawable/baseline_fork_right_24"
        app:layout_constraintStart_toEndOf="@+id/like_button"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/views_icon"
        android:text="100"
        app:icon="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintEnd_toEndOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/like_button" />

</androidx.constraintlayout.widget.ConstraintLayout>